--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "apple-signin-auth": "^1.7.5",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
