--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
